# wendah-bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/: api.py  cohere_client.py  config.py  discord.py  main.py
